# desktop-fences

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auto_classifier.rs  db.rs  desktop_features.rs  desktop_scanner.rs  disk_mapper.rs  fence_manager.rs  lib.rs  main.rs
src/components/: ContextMenu.tsx  DiskMappingPanel.tsx  FenceBox.tsx  IconItem.tsx  RecentDocumentsPanel.tsx  Toolbar.tsx
src/store/: index.ts
