[package]
name = "desktop-fences"
version = "1.0.0"
edition = "2021"

[lib]
name = "desktop_fences_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
winapi = { version = "0.3", features = ["shellapi", "shlobj", "combaseapi", "objbase", "winerror", "winnls", "winuser"] }
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_System_Com", "Win32_UI_WindowsAndMessaging"] }
image = "0.25"
base64 = "0.22"
