[package]
name = "desktop-fences"
version = "1.0.0"
edition = "2021"

[lib]
name = "desktop_fences_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2.5"
open = "5.3"
window-vibrancy = "0.6"
